@@ -1,3 +1,10 @@
+2001-06-23  Juan Pablo Mendoza <pablo_juan@yahoo.com>
+
+	* gnomine.c: (focus_out_cb), (resume_game_cb): New functions.
+	  (new_game): Hide button and show minefield.
+	  (main): Create the resume button, connect signal to
+	  focus_out_event.
+
 2001-06-12  Juan Pablo Mendoza <pablo_juan@yahoo.com>
 
 	* minefield.c (gtk_minefield_motion_notify): We was passing for 1
